feat: web sider collapsible support, put contents in tabs
